--- a/templates/bases/base_evento.html
+++ b/templates/bases/base_evento.html
@@ -33,8 +33,8 @@
                         Cliente
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="">Meus eventos</a></li>
-                        <li><a class="dropdown-item" href="">Meus certificados</a></li>
+                        <li><a class="dropdown-item" href="{% url 'meus_eventos' %}">Meus eventos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'meus_certificados' %}">Meus certificados</a></li>
                     </ul>
                 </li>
             </ul>
